fixed verbiage and homepage image cut off botttom

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,12 +89,14 @@ h1.title {
 
 @media only screen and (min-width:375px) {
     #header {
+        background-image: url("../images/IMG_6569-3.jpg");
         background-position: center;
     }
 }
 
 @media only screen and (min-width:768px) {
     #header {
+        background-image: url("../images/IMG_6569.jpg");
         background-position: top;
     }
 }
